--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <label for="userpassword">Senha</label>
           <input id="userpassword" type="password" placeholder="password" />
 
-          <label for="usertipo">Tipo</label>
+          <label for="usertipo">Tipo: Morador (1) Admnistrador (2)</label>
           <input id="usertipo" type="string" required placeholder="Tipo"/>
 
           <button id="createButton">Salvar</button>
